fix: in the process of fixing fontawesome Icon on mobile view, however the preview browzer stopped working so I have to close workspace and open it again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -592,6 +592,16 @@ footer h5{
      color: #fafafa;
 }
 
+@media (max-width:159px){
+
+.fa-user-plus{
+
+font-size: 2rem;
+
+}
+
+}
+
 @media (max-width: 600px) {
   .joinus{
      background: rgb(255, 255, 255, .3);
